objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Allergies__c</fullName>
        <label>Allergies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Information__c</fullName>
        <label>Bank Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMERGENCY_CONTACT__c</fullName>
        <label>EMERGENCY CONTACT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <label>Emergency Contact Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <label>Home Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <inlineHelpText>Department</inlineHelpText>
        <label>Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Review__c</fullName>
        <label>Last Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Office__c</fullName>
        <label>Primary Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ES - Madrid</fullName>
                </value>
                <value>
                    <fullName>Remote Working</fullName>
                </value>
                <value>
                    <fullName>UK - London</fullName>
                </value>
                <value>
                    <fullName>US - Chicago</fullName>
                </value>
                <value>
                    <fullName>US - San Francisco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Cares__c</fullName>
        <label>Special Cares</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <label>Supervisor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vacation_Days__c</fullName>
        <label>Vacation Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>CurrentEmployees</fullName>
        <columns>NAME</columns>
        <columns>Job_Function__c</columns>
        <columns>Title__c</columns>
        <columns>Supervisor_Name__c</columns>
        <columns>Primary_Office__c</columns>
        <columns>Hire_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Last_Review__c</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Termination_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Current Employees</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sales_Team</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Function__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>Termination_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Sales Team</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>